Prepare app for deployment: Add logo, update configs, and create deployment files

--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "trade-tracker",
+  "name": "z-trade",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "node server.js",
     "dev:next": "next dev",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js",
+    "start": "next start",
+    "start:custom": "NODE_ENV=production node server.js",
     "lint": "next lint",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -26,7 +27,6 @@
     "@stagewise-plugins/react": "^0.6.2",
     "@stagewise/toolbar-next": "^0.6.2",
     "@tensorflow/tfjs": "^4.22.0",
-    "@tensorflow/tfjs-node": "^4.22.0",
     "axios": "^1.10.0",
     "date-fns": "^4.1.0",
     "ioredis": "^5.6.1",
@@ -39,7 +39,6 @@
     "recharts": "^3.1.0",
     "sharp": "^0.34.3",
     "simple-statistics": "^7.8.8",
-    "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "technicalindicators": "^3.1.0",
     "xlsx": "^0.18.5",
