--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.13.0",
+    "@tailwindcss/postcss": "^4.1.11",
+    "axios": "^1.10.0",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "lucide-react": "^0.525.0",
     "next": "^15.4.1",
+    "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "lucide-react": "^0.525.0",
-    "next-themes": "^0.4.6",
     "recharts": "^3.1.0",
-    "axios": "^1.10.0",
-    "date-fns": "^4.1.0"
+    "tailwind-merge": "^3.3.1",
+    "yahoo-finance2": "^2.13.3"
   },
   "devDependencies": {
     "@types/node": "^20",
