--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "create-user": "tsx scripts/create-user.ts"
+    "create-user": "tsx scripts/create-user.ts",
+    "debug-auth": "tsx scripts/debug-auth.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.13.0",
