Fix Vercel configuration and add simple API test route

--- a/Trade/z-trade/vercel.json
+++ b/Trade/z-trade/vercel.json
@@ -1,12 +1,3 @@
 {
-  "version": 2,
-  "buildCommand": "npm run build",
-  "outputDirectory": ".next",
-  "installCommand": "npm install",
-  "framework": "nextjs",
-  "functions": {
-    "app/api/**/*.ts": {
-      "maxDuration": 30
-    }
-  }
+  "framework": "nextjs"
 } 
