Add explicit App Router configuration and Pages Router test

--- a/Trade/z-trade/vercel.json
+++ b/Trade/z-trade/vercel.json
@@ -1,3 +1,10 @@
 {
-  "framework": "nextjs"
+  "framework": "nextjs",
+  "buildCommand": "npm run build",
+  "installCommand": "npm install",
+  "functions": {
+    "app/api/**/*.ts": {
+      "maxDuration": 30
+    }
+  }
 } 
