Fix Vercel configuration for Pages Router and add diagnostic endpoints

--- a/Trade/z-trade/vercel.json
+++ b/Trade/z-trade/vercel.json
@@ -3,6 +3,9 @@
   "buildCommand": "npm run build",
   "installCommand": "npm install",
   "functions": {
+    "pages/api/**/*.js": {
+      "maxDuration": 30
+    },
     "app/api/**/*.ts": {
       "maxDuration": 30
     }
