--- a/Trade/z-trade/package.json
+++ b/Trade/z-trade/package.json
@@ -22,7 +22,7 @@
     "date-fns": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.525.0",
-    "next": "^14.2.0",
+    "next": "14.2.0",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
