feat: integrate Clerk authentication - Replace custom auth with Clerk SDK - Add clerkMiddleware and ClerkProvider - Update User model for Clerk integration - Add Clerk UI components (SignIn, SignUp, UserButton) - Create protected routes with useUser hook - Update database schema and run migration - Remove password and name fields, add firstName, lastName, imageUrl

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug-auth": "tsx scripts/debug-auth.ts"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.28.1",
     "@prisma/client": "^6.13.0",
     "@stagewise-plugins/react": "^0.6.2",
     "@stagewise/toolbar-next": "^0.6.2",
