--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^19.1.0",
     "recharts": "^3.1.0",
     "socket.io-client": "^4.8.1",
+    "svix": "^1.70.0",
     "tailwind-merge": "^3.3.1",
     "xlsx": "^0.18.5",
     "yahoo-finance2": "^2.13.3"
