--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@clerk/nextjs": "^6.28.1",
     "@prisma/client": "^6.13.0",
     "@supabase/supabase-js": "^2.53.0",
-    "@tailwindcss/postcss": "^4.1.11",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
@@ -39,10 +38,12 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/socket.io-client": "^1.4.36",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.4.1",
+    "postcss": "^8.5.6",
     "prisma": "^6.13.0",
-    "tailwindcss": "^4",
+    "tailwindcss": "^3.4.17",
     "tsx": "^4.20.3",
     "typescript": "^5"
   }
